tests/reference/ast-prefix_string_01-cf221fd.stderr
syntax error: Token '"Hello"' (of type 'string') is unexpected here
 --> tests/errors/prefix_string_01.py:3:11
  |
3 |     print "Hello", "World" 
  |           ^^^^^^^ 


Note: Please report unclear or confusing messages as bugs at
https://github.com/lcompilers/lpython/issues.
